@startuml
skinparam monochrome true
skinparam ClassAttributeIconSize 0
class WindowManagementModule {
}
interface IModule {
    + Identifier : Guid
    + IsActive : bool <<get>> <<set>>
    + Initialize() : void
}
IModule <|-- ICollectingModule
ICollectingModule <|-- WindowManagementModule
WindowManagementModule --> "WindowFocusEventProducer" WindowFocusEventProducer
WindowManagementModule ---> "WindowMovementEventProducer" WindowMovementEventProducer
WindowManagementModule --> "       WindowResizingEventProducer" WindowResizingEventProducer
WindowManagementModule ---> "WindowStateChangedEventProducer" WindowStateChangedEventProducer
@enduml
